Fix Tooltip alignment bug

--- a/app/containers/MainLayout/style.scss
+++ b/app/containers/MainLayout/style.scss
@@ -39,7 +39,6 @@
 }
 
 .EMM-Report-Overlay {
-  position: fixed;
   height: 100%;
   width: 100%;
   background: #F5F5F5;
